...
                            <constraint firstItem="MTz-7X-GS9" firstAttribute="top" secondItem="SsX-Ve-kCn" secondAttribute="top" id="2jU-pe-Ifj"/>
                            <constraint firstItem="MTz-7X-GS9" firstAttribute="leading" secondItem="SsX-Ve-kCn" secondAttribute="leading" id="UWL-0o-aoh"/>
                            <constraint firstItem="SsX-Ve-kCn" firstAttribute="trailing" secondItem="MTz-7X-GS9" secondAttribute="trailing" id="f8h-sn-auk"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="SsX-Ve-kCn"/>
                    </view>
                    <navigationItem key="navigationItem" title="Businesses Near You" id="TnG-pJ-5IY">
                        <barButtonItem key="rightBarButtonItem" title="History" id="HU4-Vi-t1e">
                            <connections>
                                <segue destination="cZE-lX-Fb2" kind="presentation" identifier="showHistory" id="qLc-MB-YcZ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
